modify(backend):
1.add more role and permission
2.add department tree api for registration
3.modify api cache set expire time